--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,8 +43,6 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@tailwindcss/typography": "latest",
-    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -65,12 +63,11 @@
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss": "latest",
-    "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.8",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/formidable": "^3.4.5",
@@ -81,15 +78,18 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/supertest": "^6.0.2",
+    "autoprefixer": "^10.4.21",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "node-fetch": "^2.7.0",
     "pdfkit": "^0.16.0",
-    "postcss": "^8",
+    "postcss": "^8.5.4",
     "supertest": "^7.0.0",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.2.5",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@tailwindcss/typography": "latest",
+    "tailwindcss-animate": "^1.0.7"
   },
   "license": "MIT"
 }
